Changelog for HLint

    #281, enhance the redundant monad return warnings
    #293, eliminate _noParen_ from the result
    #284, eliminate ViewPatterns from FindHints, hits compiler bug
    #283, don't suggest removal of RecordWildCards
    Add some hints about concat and (++)
    #273, require haskell-src-exts >= 1.8.2
1.6.20
    #275, add more acknowledgements (still very incomplete)
    #254, remove the foldr1/map hint
    Compress nested lambdas, \x -> \y -> ... ==> \x y -> ...
    Fix minor bug on \x -> \x -> foo x x
    #274, add redundant bracket inside record update/construct
    #272, don't mess up creating sections from qualified names
    Add some hints to suggest elem
    Add Paths_hlint to the .cabal file, or the library doesn't link
    #271, rewrite the match engine in terms of SYB
1.6.19
    #251, add automatic definition hunting with --find
    #268, rewrite the (.) expansion in hints to fix various bugs
    #269, replacing a case with an if should generate one hint
    Document the ANN pragmas
    Require haskell-src-exts-1.8.1
1.6.18
    Remove a hint replacing do x <- foo; bar x with foo >>= bar
    #263, support CPP files more fully
    Upgrade to hscolour-1.16
    Upgrade to cpphs-1.11
1.6.17
    Force cpphs-1.10, since 1.11 breaks the interface
    More hints from the Data.Maybe module
    #262, add support for the TupleSections extension
    #264, upgrade to haskell-src-exts-1.8.*, fixes QuasiQuote pos
    Upgrade to cpphs 1.10
    #266, don't match hints that appear to be the definitions
    #248, tone down the eta reduction hints
    Add support for WARNING pragma's to reclassify hints
    Support ignoring hints on types
    Give better error messages on incorrect settings files
    Add temporary haskell-src-exts 1.5/1.6 compatibility
    #327, add hints to use expressions infix
    #240, if a then True else False no longer suggests a || False
    Upgrade to haskell-src-exts-1.7.*