@@ -301,6 +301,7 @@ yes x = case x of {False -> a ; _ -> b} -- if x then b else a
 no = const . ok . toResponse $ "saved"
 yes = case x z of Nothing -> y z; Just pattern -> pattern -- fromMaybe (y z) (x z)
 yes = if p then s else return () -- Control.Monad.when p $ s
+error = a $$$$ b $$$$ c ==> a . b $$$$$ c
 
 
 import Prelude \
